--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h2>mama tuamr class ajke ami korbo na kinto</h2>
     <h1>mama tumake onek balo lage</h1>
     <h4>mama tumi ki single </h4>
-    ami tuamke lkjdsf;hjdsfj
+    ami tuamke lkjdsf;hjdsfj.
+
+    ami keno kew ke kiso deina 
+    ami ajke bat khabo
+    ami mymensing jabo
+    f
 </body>
 </html>
